Polish. Added dark mode variant of kogneato pointing down.

--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -616,6 +616,14 @@ header {
 		}
 	}
 
+	button#mobile-menu-toggle div {
+		background: #dbdbdb;
+
+		&:before, &:after {
+			background: #dbdbdb;
+		}
+	}
+
 	// Not being used but kept just in case
 	.profile-menu
 	{
