--- a/src/components/no-content-icon.scss
+++ b/src/components/no-content-icon.scss
@@ -47,56 +47,11 @@ div#no-score-content, div#not-scorable {
 	}
 }
 
-@media (min-width: 780px) and (max-width: 1000px){
-	div#no-score-content
-	{
-		width: 100%;
-		justify-content: flex-end;
-		padding-top: 20%;
-		padding-left: 20%;
-
-		&#no-score-content {
-		background: #fff url('/img/kogneato_no_scores.svg') 35% 38%/215px auto no-repeat;
-	}
-	}
-}
-@media (min-width: 580px) and (max-width: 780px){
-	div#no-score-content
-	{
-		width: 100%;
-		justify-content: flex-end;
-		padding-top: 20%;
-		padding-left: 30%;
-
-		&#no-score-content {
-		background: #fff url('/img/kogneato_no_scores.svg') 40% 30%/215px auto no-repeat;
-	}
-	}
-}
-@media (min-width: 380px)and (max-width: 580px){
-	div#no-score-content
-	{
-
-		justify-content: flex-end;
-		padding: 20px;
-
-		&#no-score-content {
-		background: #fff url('/img/kogneato_no_scores.svg') 50% 10%/215px auto no-repeat;
-	}
-	}
-}
-@media (min-width: 180px) and (max-width: 380px){
-	div#no-score-content
-	{
-		width: 40%;
-		justify-content: flex-end;
-		padding-top: 15%;
-		padding-left: 0%;
-		position: relative;
-		right: 30%;
-
-		&#no-score-content {
-		background: #fff url('/img/kogneato_no_scores.svg') 80% 30%/215px auto no-repeat;
-	}
+@media (max-width: 950px) {
+	div#no-score-content, div #not-scorable {
+		height: auto;
+		width: auto;
+		margin: 0 auto;
+		padding: 250px 0 0 0;
 	}
 }
