--- a/src/components/css/beard-mode.scss
+++ b/src/components/css/beard-mode.scss
@@ -17,6 +17,27 @@
 	}
 }
 
+.darkMode {
+	.my_widgets section.directions.unchosen {
+		&.bearded {
+			background: url('/img/kogneato_mywidgets_bearded_dark.svg') 50% 30%/250px auto no-repeat;
+			min-height: 850px;
+		}
+	}
+
+	.my_widgets section.page div.scores #no-score-content {
+		&.bearded {
+			background: url('/img/kogneato_no_scores_bearded_dark.svg') 10% 30%/250px auto no-repeat !important;
+		}
+	}
+
+	.my_widgets section.page div.scores #not-scorable {
+		&.bearded {
+			background: url('/img/kogneato_with_a_broom_bearded_dark.svg') 20% 20%/auto 240px no-repeat !important;
+		}
+	}
+}
+
 .my_widgets aside .courses .widget_list {
 	overflow: auto;
 	padding-bottom: 30px;
